--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-   <p> <a href="https://github.com/MSenaGomes/SheCodes-weather-app">Open-source code</a> by MSenaGomes</p>
+   <p class="footer"> <a href="https://github.com/MSenaGomes/SheCodes-weather-app">Open-source code</a> by MSenaGomes</p>
   </div>
   <script src="https://kit.fontawesome.com/21a18eec09.js" crossorigin="anonymous"></script>
   <script src="src/index.js"></script>
