--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           <div class="row">
             <div class="col-4">
             <h3><small>Local Time</small></h3>
-             <h3 class="date-time">Week day, time</h3>
-             <h3>Description</h3>
+             <h3 id="date-time">Week day, time</h3>
+             <h3 id="description">Description</h3>
              <div id="temperature-degrees">
                 <h1 class="temperature" id="temperature">##</h1>
 
                 <span class="units">
-                  <a href="#" id="celcius">°C</a> |
+                  <a href="#" id="celsius">°C</a> |
                   <a href="#" id="fahrenheit">°F</a>
               </div>
               <h3 id="feels-like"> Feels like:##ºC</h3>
@@ -62,7 +62,7 @@
 
               
               <h3 id="humidity"> Humidity: ##% </h3>
-              <h3 id="wind"> Wind Speed: #km/h </h3>
+              <h3 id="wind"> Wind Speed: #m/s </h3>
               <h3> <strong>MAX|min</strong> </h3>
               
               <h3 id="maxmin">##ºC/##ºC</h3>
