--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
                 <input type="search" class="form-control" autofocus="on" placeholder="Search for a city" id="input"
                   autocomplete="off" />
               </div>
-            </form>
+            
           </div>
           <div class="col-3">
-            <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm" id="search-button"/>
+            <input type="submit" value="Search" class="btn btn-primary shadow-sm" id="search-button"/>
           </div>
+        </form>
           <div class="col-1">
             <button class="btn btn-success shadow-sm w-100" id="current-location-button"><i
                 class="fas fa-map-marker-alt"></i>
