Fix forecast icons

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             
             <div class="col-4">
-            <i class="fas" id="icon1"></i>
+            <i class="fas" id="icon"></i>
             </div>
             <div class="col-4">
 
