--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="temperature" id="temperature">##</h1>
 
                 <span class="units">
-                  <a href="#" id="celsius">°C</a> |
+                  <a href="#" class="active" id="celsius">°C</a> |
                   <a href="#" id="fahrenheit">°F</a>
               </div>
               <h3 id="feels-like"> Feels like:##ºC</h3>
