--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
           </div>
           <div class="col-3">
-            <input type="submit" value="Search" class="btn btn-primary shadow-sm" id="search-button"/>
+            <input type="submit" value="Search" class="btn btn-primary w-100 shadow-sm" id="search-button"/>
           </div>
         </form>
           <div class="col-1">
